src/main/java-generated/com/iodesystems/db/query/DataSetSearchParser.java
// Generated from /Users/nthalk/local/src/iodesystems/dataset/src/main/antlr4/DataSetSearchParser.g4 by ANTLR 4.13.2
package com.iodesystems.db.query;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class DataSetSearchParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ESCAPED_CHAR=1, ESCAPE=2, NEGATE=3, ANY=4, STRING=5, TARGET_SEPARATOR=6, 
		TERM_OR=7, TERM_GROUP_START=8, TERM_GROUP_END=9, WS=10, ESCAPED=11;
	public static final int
		RULE_search = 0, RULE_simpleTerm = 1, RULE_andTerm = 2, RULE_orTerm = 3, 
		RULE_term = 4, RULE_termTarget = 5, RULE_termValueGroup = 6, RULE_simpleValue = 7, 
		RULE_termValue = 8, RULE_andValue = 9, RULE_orValue = 10, RULE_unprotectedOrValue = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"search", "simpleTerm", "andTerm", "orTerm", "term", "termTarget", "termValueGroup", 
			"simpleValue", "termValue", "andValue", "orValue", "unprotectedOrValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'\\'", "'!'", null, null, "':'", "','", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ESCAPED_CHAR", "ESCAPE", "NEGATE", "ANY", "STRING", "TARGET_SEPARATOR", 
			"TERM_OR", "TERM_GROUP_START", "TERM_GROUP_END", "WS", "ESCAPED"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DataSetSearchParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DataSetSearchParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SearchContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DataSetSearchParser.EOF, 0); }
		public SimpleTermContext simpleTerm() {
			return getRuleContext(SimpleTermContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(DataSetSearchParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DataSetSearchParser.WS, i);
		}
		public TerminalNode TERM_OR() { return getToken(DataSetSearchParser.TERM_OR, 0); }
		public List<AndTermContext> andTerm() {
			return getRuleContexts(AndTermContext.class);
		}
		public AndTermContext andTerm(int i) {
			return getRuleContext(AndTermContext.class,i);
		}
		public List<OrTermContext> orTerm() {
			return getRuleContexts(OrTermContext.class);
		}
		public OrTermContext orTerm(int i) {
			return getRuleContext(OrTermContext.class,i);
		}
		public SearchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_search; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).enterSearch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).exitSearch(this);
		}
	}

	public final SearchContext search() throws RecognitionException {
		SearchContext _localctx = new SearchContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_search);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(24);
				simpleTerm();
				setState(29);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						setState(27);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
						case 1:
							{
							setState(25);
							andTerm();
							}
							break;
						case 2:
							{
							setState(26);
							orTerm();
							}
							break;
						}
						} 
					}
					setState(31);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				}
				break;
			}
			setState(37);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(34);
					match(WS);
					}
					} 
				}
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TERM_OR) {
				{
				setState(40);
				match(TERM_OR);
				}
			}

			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(43);
				match(WS);
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleTermContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(DataSetSearchParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DataSetSearchParser.WS, i);
		}
		public SimpleTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).enterSimpleTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).exitSimpleTerm(this);
		}
	}

	public final SimpleTermContext simpleTerm() throws RecognitionException {
		SimpleTermContext _localctx = new SimpleTermContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_simpleTerm);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(51);
				match(WS);
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			term();
			setState(61);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(58);
					match(WS);
					}
					} 
				}
				setState(63);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AndTermContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(DataSetSearchParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DataSetSearchParser.WS, i);
		}
		public AndTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).enterAndTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).exitAndTerm(this);
		}
	}

	public final AndTermContext andTerm() throws RecognitionException {
		AndTermContext _localctx = new AndTermContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_andTerm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				match(WS);
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS );
			setState(69);
			term();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OrTermContext extends ParserRuleContext {
		public TerminalNode TERM_OR() { return getToken(DataSetSearchParser.TERM_OR, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(DataSetSearchParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DataSetSearchParser.WS, i);
		}
		public OrTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).enterOrTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).exitOrTerm(this);
		}
	}

	public final OrTermContext orTerm() throws RecognitionException {
		OrTermContext _localctx = new OrTermContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_orTerm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(71);
				match(WS);
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			match(TERM_OR);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(78);
				match(WS);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			term();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TermContext extends ParserRuleContext {
		public TermValueGroupContext termValueGroup() {
			return getRuleContext(TermValueGroupContext.class,0);
		}
		public TermTargetContext termTarget() {
			return getRuleContext(TermTargetContext.class,0);
		}
		public TerminalNode TARGET_SEPARATOR() { return getToken(DataSetSearchParser.TARGET_SEPARATOR, 0); }
		public List<TerminalNode> WS() { return getTokens(DataSetSearchParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DataSetSearchParser.WS, i);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_term);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(86);
				termTarget();
				setState(87);
				match(TARGET_SEPARATOR);
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(88);
					match(WS);
					}
					}
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(96);
			termValueGroup();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TermTargetContext extends ParserRuleContext {
		public TerminalNode ANY() { return getToken(DataSetSearchParser.ANY, 0); }
		public TerminalNode STRING() { return getToken(DataSetSearchParser.STRING, 0); }
		public TermTargetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termTarget; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).enterTermTarget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).exitTermTarget(this);
		}
	}

	public final TermTargetContext termTarget() throws RecognitionException {
		TermTargetContext _localctx = new TermTargetContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_termTarget);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_la = _input.LA(1);
			if ( !(_la==ANY || _la==STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TermValueGroupContext extends ParserRuleContext {
		public TerminalNode TERM_GROUP_START() { return getToken(DataSetSearchParser.TERM_GROUP_START, 0); }
		public TerminalNode TERM_GROUP_END() { return getToken(DataSetSearchParser.TERM_GROUP_END, 0); }
		public List<TerminalNode> WS() { return getTokens(DataSetSearchParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DataSetSearchParser.WS, i);
		}
		public SimpleValueContext simpleValue() {
			return getRuleContext(SimpleValueContext.class,0);
		}
		public List<AndValueContext> andValue() {
			return getRuleContexts(AndValueContext.class);
		}
		public AndValueContext andValue(int i) {
			return getRuleContext(AndValueContext.class,i);
		}
		public List<OrValueContext> orValue() {
			return getRuleContexts(OrValueContext.class);
		}
		public OrValueContext orValue(int i) {
			return getRuleContext(OrValueContext.class,i);
		}
		public List<UnprotectedOrValueContext> unprotectedOrValue() {
			return getRuleContexts(UnprotectedOrValueContext.class);
		}
		public UnprotectedOrValueContext unprotectedOrValue(int i) {
			return getRuleContext(UnprotectedOrValueContext.class,i);
		}
		public TermValueGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termValueGroup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).enterTermValueGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).exitTermValueGroup(this);
		}
	}

	public final TermValueGroupContext termValueGroup() throws RecognitionException {
		TermValueGroupContext _localctx = new TermValueGroupContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_termValueGroup);
		int _la;
		try {
			int _alt;
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TERM_GROUP_START:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(TERM_GROUP_START);
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(101);
					match(WS);
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 58L) != 0)) {
					{
					setState(107);
					simpleValue();
					setState(111);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(108);
							match(WS);
							}
							} 
						}
						setState(113);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
					}
					setState(118);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							setState(116);
							_errHandler.sync(this);
							switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
							case 1:
								{
								setState(114);
								andValue();
								}
								break;
							case 2:
								{
								setState(115);
								orValue();
								}
								break;
							}
							} 
						}
						setState(120);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
					}
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==WS) {
						{
						{
						setState(121);
						match(WS);
						}
						}
						setState(126);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(129);
				match(TERM_GROUP_END);
				}
				break;
			case ESCAPED_CHAR:
			case NEGATE:
			case ANY:
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				simpleValue();
				setState(134);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(131);
						unprotectedOrValue();
						}
						} 
					}
					setState(136);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleValueContext extends ParserRuleContext {
		public TermValueContext termValue() {
			return getRuleContext(TermValueContext.class,0);
		}
		public SimpleValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).enterSimpleValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).exitSimpleValue(this);
		}
	}

	public final SimpleValueContext simpleValue() throws RecognitionException {
		SimpleValueContext _localctx = new SimpleValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_simpleValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			termValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TermValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(DataSetSearchParser.STRING, 0); }
		public TerminalNode ANY() { return getToken(DataSetSearchParser.ANY, 0); }
		public TerminalNode ESCAPED_CHAR() { return getToken(DataSetSearchParser.ESCAPED_CHAR, 0); }
		public TerminalNode NEGATE() { return getToken(DataSetSearchParser.NEGATE, 0); }
		public TermValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).enterTermValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).exitTermValue(this);
		}
	}

	public final TermValueContext termValue() throws RecognitionException {
		TermValueContext _localctx = new TermValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_termValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEGATE) {
				{
				setState(141);
				match(NEGATE);
				}
			}

			setState(144);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 50L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AndValueContext extends ParserRuleContext {
		public TermValueContext termValue() {
			return getRuleContext(TermValueContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(DataSetSearchParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DataSetSearchParser.WS, i);
		}
		public AndValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).enterAndValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).exitAndValue(this);
		}
	}

	public final AndValueContext andValue() throws RecognitionException {
		AndValueContext _localctx = new AndValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_andValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(146);
				match(WS);
				}
				}
				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS );
			setState(151);
			termValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OrValueContext extends ParserRuleContext {
		public TerminalNode TERM_OR() { return getToken(DataSetSearchParser.TERM_OR, 0); }
		public TermValueContext termValue() {
			return getRuleContext(TermValueContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(DataSetSearchParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DataSetSearchParser.WS, i);
		}
		public OrValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).enterOrValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).exitOrValue(this);
		}
	}

	public final OrValueContext orValue() throws RecognitionException {
		OrValueContext _localctx = new OrValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_orValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(153);
				match(WS);
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			match(TERM_OR);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(160);
				match(WS);
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(166);
			termValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnprotectedOrValueContext extends ParserRuleContext {
		public TerminalNode TERM_OR() { return getToken(DataSetSearchParser.TERM_OR, 0); }
		public TermValueContext termValue() {
			return getRuleContext(TermValueContext.class,0);
		}
		public UnprotectedOrValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unprotectedOrValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).enterUnprotectedOrValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataSetSearchParserListener ) ((DataSetSearchParserListener)listener).exitUnprotectedOrValue(this);
		}
	}

	public final UnprotectedOrValueContext unprotectedOrValue() throws RecognitionException {
		UnprotectedOrValueContext _localctx = new UnprotectedOrValueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_unprotectedOrValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(TERM_OR);
			setState(169);
			termValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}